gcc/testsuite/g++.dg/cpp0x/initlist75.C
// PR c++/59080
// { dg-require-effective-target c++11 }

#include <initializer_list>

auto foo[] = {};    // { dg-error "auto|unable to deduce" }
